--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ form#calc span{margin-bottom:15px;display:block;}
 	margin:20px 0 20px 20px;
 }
 
-.calc-modal{
-	
+#calc-modal {
+	display:none;
+	background-color:rgba(0,0,0,0.5);width:100%;height:100%;position:absolute;top:0;right:0;bottom:0;left:0;}
+#calc-modal .inner-modal{
+	background-color:#fff;border-top:3px solid #ccc;padding:20px;
+	width:600px;margin:5% auto 0 auto;position:relative;
 }
+#calc-modal h3{margin-top:0;}
+#calc-modal .close-modal{margin-bottom:0;margin-top:10px;display:block;text-align:right;text-decoration: underline;cursor:pointer;}
+.open-modal {text-decoration: underline;cursor: pointer;}
