--- a/style.css
+++ b/style.css
@@ -9,6 +9,28 @@ form#calc span{margin-bottom:15px;display:block;}
 	margin:20px 0 20px 20px;
 }
 
+.dontknow-calc .result, .haveprice-calc .result{
+	padding:5px 20px;
+	background-color:#E8E8E8;
+	font-size:18px;
+	display:none;
+}
+
+.dontknow-calc .btn, .haveprice-calc .btn{
+	display:inline-block;
+	padding:5px 10px;
+	border-radius:5px;
+	background-color:#3366CC;
+	color:#fff;
+}
+
+.dontknow-calc .btn:hover, .haveprice-calc .btn:hover{background-color:#336699;}
+
+/* Validation stuff */
+.errorInput{border:1px solid red;}
+p.errorMsg{display:none;color:red;font-size:12px;margin-left:15px;}
+
+/* Modal stuff */
 #calc-modal {
 	display:none;
 	background-color:rgba(0,0,0,0.5);width:100%;height:100%;position:absolute;top:0;right:0;bottom:0;left:0;}
